[project]
name = "ben-lammps-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben", email = "bennyp2494@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "pandas>=2.3.2",
    "tqdm>=4.67.1",
]

[project.scripts]
ben-lammps-utils = "ben_lammps_utils:main"

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
